Split annotations to separate project Use fabric mixin dependency Enable preview features for annotation processor only